Integración de cálculo SIMD con JNI y ajustes en renderización